<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/fragment_about_layout_margin"
    android:focusableInTouchMode="true">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutServiceUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etServiceUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintServiceURL"
                android:inputType="textUri" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvSelectPrinter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectPrinter"
            style="@style/textViewStyle"
            android:layout_below="@+id/txtInputLayoutServiceUrl"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>

        <Spinner
            android:id="@+id/spinnerSelectPrinter"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/tvSelectPrinter"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_marginTop="5dp">
        </Spinner>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/save"
            android:background="@drawable/button_shape"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_toLeftOf="@+id/btnClose"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/save"
            android:layout_below="@+id/spinnerSelectPrinter" />
        <Button
            android:id="@+id/btnClose"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/close"
            android:background="@drawable/button_shape"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:drawableRight="@drawable/close"
            android:layout_alignTop="@+id/btnSave"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>