<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlStRefSelect"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/tvSelectStRef"
            style="@style/textViewStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinnerSelectStRef"
            android:layout_marginBottom="-115dp"
            android:text="@string/selectStRef">

        </TextView>
        <TextView
            android:id="@+id/tvVehicleNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicleNoText"
            style="@style/textViewStyleSmall"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </TextView>

        <com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectVehicle"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvVehicleNo">
        </com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner>

        <com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectStRef"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="115dp">

        </com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="65dp"
            android:background="@drawable/button_shape"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_close_shape"
            android:elevation="30dp"
            android:foreground="@drawable/button_cross_close"
            android:foregroundGravity="center"
            android:text="@string/putaway"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>
</RelativeLayout>