<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlJobOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:id="@+id/tvSelectJobOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectJobOrder"
            style="@style/textViewStyle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:textStyle="normal"/>

        <com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectJobOrder"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_below="@+id/tvSelectJobOrder">
        </com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:background="@drawable/button_shape"
            android:elevation="30dp"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnClose"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_close_shape"
            android:elevation="30dp"
            android:foreground="@drawable/button_cross_close"
            android:foregroundGravity="center"
            android:text="@string/putaway"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>