<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/white"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/rlPackListOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="visible">


        <TextView
            android:id="@+id/tvPacklist"
            style="@style/textViewStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerSelectPackType"
            android:layout_marginTop="15dp"
            android:text="@string/selectPickList"
            android:textStyle="normal" />

        <com.inventrax.karthikm.merlinwmscipher_vip_rdc.SearchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectPackList"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/tvPacklist"/>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:background="@drawable/button_shape"
            android:elevation="30dp"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_close_shape"
            android:elevation="30dp"
            android:foreground="@drawable/button_cross_close"
            android:foregroundGravity="center"
            android:text="@string/putaway"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>


</RelativeLayout>